--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-
+.env
+google_key.json
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
